update in docker and other updates
